# inseq

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TIPS.md  cookiecutter-config-file.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: .stale.yml  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: auto-merge.yml  build.yml  greetings.yml  release-drafter.yml
amseq/: __init__.py  __main__.py  attribution_model.py  outputs.py  visualize.py
amseq/attr/: __init__.py
amseq/attr/feat/: __init__.py  feature_attribution.py  integrated_gradients.py
amseq/data/: attribution.py
amseq/models/: attribution_model.py  model_decorators.py
amseq/utils/: __init__.py  errors.py  misc.py  torch_utils.py
docker/: Dockerfile  README.md
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: inseq.css  inseq.js  style.css
docs/source/_templates/: footer.html  layout.html
docs/source/diagrams/: classes.drawio
docs/source/examples/: attribute_mmt.rst  custom_attribute_target.rst  faq.rst  locate_gpt2_knowledge.rst  pair_comparison.rst  petals.rst  quickstart.rst  tuned_lens.rst
docs/source/html_outputs/: contrastive_example.htm  m2m_it_example.htm  pair_comparison.htm  petals_llama_reasoning_contrastive.htm  quickstart_example.htm  tuned_lens.htm  tuned_lens_force.htm  winomt_example.htm
docs/source/main_classes/: aggregation_functions.rst  aggregators.rst  cli.rst  data_classes.rst  feature_attribution.rst  gradient_attribution.rst  main_functions.rst  models.rst  step_functions.rst
examples/: inseq_tutorial.ipynb  nmt_attribute.ipynb  test.ipynb
inseq/: __init__.py  __main__.py
inseq/attr/: __init__.py  attribution_decorators.py  step_functions.py
inseq/attr/feat/: __init__.py  attention_attribution.py  attribution_utils.py  feature_attribution.py  gradient_attribution.py  internals_attribution.py  occlusion.py  perturbation_attribution.py
inseq/attr/feat/ops/: __init__.py  aggregable_mixin.py  alti.py  attention_weights.py  basic_attention.py  discretized_integrated_gradients.py  lime.py  monotonic_path_builder.py  reagent.py  rollout.py  sequential_integrated_gradients.py  value_zeroing.py
inseq/attr/feat/ops/discretized_integrated_gradients/: __init__.py  dig_method.py  dig_utils.py
inseq/attr/feat/ops/reagent_core/: __init__.py  aggregate_rationalizer.py  base.py  importance_score_evaluator.py  rationalizer.py  sample_rationalizer.py  stopping_condition_evaluator.py  token_replacer.py  token_sampler.py
inseq/attr/feat/ops/reagent_core/importance_score_evaluator/: base.py  delta_prob.py
inseq/attr/feat/ops/reagent_core/stopping_condition_evaluator/: base.py  dummy.py  top_k.py
inseq/attr/feat/ops/reagent_core/token_replacement/token_replacer/: base.py  ranking.py  threshold.py  uniform.py
inseq/attr/feat/ops/reagent_core/token_replacement/token_sampler/: base.py  inferential.py  inferential_m.py  postag.py  uniform.py
inseq/attr/feat/ops/reagent_core/utils/: serializing.py  traceable.py
inseq/commands/: __init__.py  attribute.py  attribute_context.py  attribute_dataset.py  base.py  cli.py  commands_utils.py
inseq/commands/attribute/: __init__.py  attribute.py  attribute_args.py
inseq/commands/attribute_context/: __init__.py  attribute_context.py  attribute_context_args.py  attribute_context_helpers.py  attribute_context_viz_helpers.py
inseq/commands/attribute_dataset/: __init__.py  attribute_dataset.py  attribute_dataset_args.py
inseq/commands/commands_utils/attribute/: attribute_args.py
inseq/commands/commands_utils/attribute_context/: attribute_context_args.py  attribute_context_helpers.py  attribute_context_viz_helpers.py
inseq/commands/commands_utils/attribute_dataset/: attribute_dataset_args.py
inseq/data/: __init__.py  aggregation_functions.py  aggregator.py  attribution.py  batch.py  data_utils.py  viz.py
inseq/models/: __init__.py  attribution_model.py  decoder_only.py  encoder_decoder.py  huggingface_model.py  model_config.py  model_config.yaml  model_decorators.py
inseq/utils/: __init__.py  alignment_utils.py  argparse.py  cache.py  contrast_utils.py  errors.py  hooks.py  id_utils.py  import_utils.py  misc.py  registry.py  serialization.py  torch_utils.py  typing.py  viz_utils.py
tests/: __init__.py  inference_commons.py  test_outputs.py
tests/attr/feat/: test_attribution_utils.py  test_feature_attribution.py  test_gradient_attribution.py  test_step_functions.py
tests/attr/feat/ops/: test_attention_utils.py  test_monotonic_path_builder.py  test_rollout.py
tests/attr/feat/ops/discretized_integrated_gradients/: test_dig_utils.py
tests/commands/: test_attribute_context.py
tests/data/: test_aggregator.py  test_attribution.py
tests/fixtures/: aggregator.json  huggingface_model.json  m2m_418M_batches.json
tests/models/: test_huggingface_model.py  test_model_config.py
tests/utils/: test_torch_utils.py
