# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "inseq"
version = "0.1.0"
description = "Interpretability for Sequence-to-sequence models 🔍"
readme = "README.md"
authors = ["gsarti <gabriele.sarti996@gmail.com>"]
maintainers = ["gsarti <gabriele.sarti996@gmail.com>"]
license = "Apache Software License 2.0"
repository = "https://github.com/gsarti/inseq"
homepage = "https://github.com/gsarti/inseq"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["seq2seq", "transformers", "natural language processing", "XAI", "explainable ai", "interpretability"]  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"inseq" = "inseq.__main__:app"

[tool.poetry.dependencies]
python = "^3.8"

typer = {extras = ["all"], version = "^0.4.0"}
rich = "^10.12.0"
transformers = "^4.11.3"
sentencepiece = "^0.1.96"
protobuf = "^3.19.1"
torch = "^1.9.1"
captum = "^0.4.0"
seaborn = "^0.11.2"
numpy = "^1.21.0"
torchtyping = "^0.1.4"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = {version = "^21.9b0", allow-prereleases = true}
darglint = "^1.8.0"
flake8 = "^4.0.0"
ipykernel = "^6.4.1"
isort = {extras = ["colors"], version = "^5.10.0"}
mypy = "^0.910"
mypy-extensions = "^0.4.3"
pre-commit = "^2.14.0"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"
pytest = "^6.2.4"
pyupgrade = "^2.29.0"
recommonmark = "^0.7.1"
safety = "^1.10.3"
sphinx = "^4.2.0"
sphinxemoji = "^0.2.0"
sphinxext-opengraph = "^0.4.2"
sphinx-copybutton = "^0.4.0"
sphinx-gitstamp = "^0.3.1"
sphinx-markdown-tables = "^0.0.15"
sphinx-rtd-theme = "^1.0.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 38
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.8
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
testpaths = "tests"
python_files = "test_*.py"
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

markers = [
  "slow"
]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--disable-pytest-warnings",
  "--color=yes"
]
