# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "inseq"
version = "0.5.0.dev0"
description = "Interpretability for Sequence Generation Models 🔍"
readme = "README.md"
authors = ["The Inseq Team"]
maintainers = ["gsarti <gabriele.sarti996@gmail.com>"]
license = "Apache Software License 2.0"
repository = "https://github.com/inseq-team/inseq"
homepage = "https://github.com/inseq-team/inseq"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["seq2seq", "transformers", "natural language processing", "XAI", "explainable ai", "interpretability"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: GPU",
  "Environment :: GPU :: NVIDIA CUDA",
  "Environment :: GPU :: NVIDIA CUDA :: 11.3",
  "Framework :: Jupyter",
  "Framework :: Sphinx",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"

]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"inseq" = "inseq.commands.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

rich = ">=10.13.0"
transformers =  { version = ">=4.22.0", extras = ["sentencepiece", "tokenizers", "torch"] }
protobuf = ">=3.20.1"
captum = ">=0.6.0"
numpy = ">=1.21.6"
jaxtyping = "^0.2.23"
typeguard = "<=2.13.3"
# Omitting future torch releases as they don't install nvidia dependencies: https://github.com/pytorch/pytorch/issues/100974
torch = "2.0.0"
matplotlib = ">=3.5.3"
tqdm = ">=4.64.0"
poethepoet = ">=0.13.1"
nvidia-cublas-cu11 = { version = ">=11.10.3.66", platform = 'linux' }
nvidia-cuda-cupti-cu11 = { version = ">=11.7.101", platform = 'linux' }
nvidia-cuda-nvrtc-cu11 = { version = ">=11.7.99", platform = 'linux' }
nvidia-cuda-runtime-cu11 = { version = ">=11.7.99", platform = 'linux' }
nvidia-cudnn-cu11 = { version = ">=8.5.0.96", platform = 'linux' }
nvidia-cufft-cu11 = { version = ">=10.9.0.58", platform = 'linux' }
nvidia-curand-cu11 = { version = ">=10.2.10.91", platform = 'linux' }
nvidia-cusolver-cu11 = { version = ">=11.4.0.1", platform = 'linux' }
nvidia-cusparse-cu11 = { version = ">=11.7.4.91", platform = 'linux' }
nvidia-nccl-cu11 = { version = ">=2.14.3", platform = 'linux' }
nvidia-nvtx-cu11 = { version = ">=11.7.91", platform = 'linux' }

ipykernel = { version = ">=6.19.2", optional = true }
ipywidgets = { version = ">=8.0.0rc2", optional = true }
joblib = { version = ">=1.2.0", optional = true }
scikit-learn = { version = ">=1.1.1", optional = true }
scipy = { version = ">=1.8.1", optional = true}
datasets = { version = ">=2.3.2", optional = true }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.3.0"
sphinxemoji = ">=0.2.0"
sphinxext-opengraph = ">=0.4.2"
sphinx-copybutton = ">=0.4.0"
sphinx-gitstamp = ">=0.3.2"
sphinx-design = ">=0.4.1"
furo = ">=2022.12.7"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
bandit = ">=1.7.4"
safety = ">=2.2.0"
darglint = ">=1.8.1"
pre-commit = ">=2.19.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
ruff  = ">=0.1.2"

[tool.poetry.group.jax]
optional = true

[tool.poetry.group.jax.dependencies]
jax = ">=0.4.20"
jaxlib = ">=0.4.20"

[tool.poetry.extras]
sklearn = ["scikit-learn", "joblib"]
datasets = ["datasets"]
notebook = ["ipykernel", "ipywidgets"]

[tool.poe.tasks]
upgrade-pip = "python -m pip install --upgrade pip"
torch-cpu = "python -m pip install torch --index-url https://download.pytorch.org/whl/cpu"
torch-cuda = "python -m pip install torch"


[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
strict = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
testpaths = "tests"
python_files = "test_*.py"
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

markers = [
  "slow",
  "require_cuda_gpu"
]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--disable-pytest-warnings",
  "--color=yes"
]

[tool.coverage.run]
parallel = true
source = [
    "inseq",
]
omit = [
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no-cover",
    "pass",
    "raise",
    "except",
    "raise NotImplementedError",
]

[tool.bandit]
targets = ["inseq"]
skips = ["B301"]

[tool.ruff]
target-version = "py38"
exclude = [
    ".git",
    ".vscode",
    ".github",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "htmlcov",
    "dev_examples",
    "dist",
    ".tox",
    "temp",
    "*.egg",
    "venv",
    ".venv",
]
fix = true
ignore = [
    "B006", # mutable default argument
    "C901", # function too complex
    "E501", # line too long (handled by format)
    "E731", # do not assign a lambda expression, use a def
    "E741", # ambiguous variable name
    "F722", # syntax error in forward annotation (as used by jaxtyping)
    "F821", # undefined name
    "PLR2004", # unnamed numerical constants used
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "W191", # indentation contains tabs (handled by format)
]
line-length = 119
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "C", # flake8-comprehensions
    #"D", # flake8-docstrings
    "B", # flake8-bugbear
    "I", # isort
    "UP", # flake8-pyupgrade
    "PLC", # flake8-pylint
    "PLE", # flake8-pylint
    "PLR", # flake8-pylint
    "PLW", # flake8-pylint
]
src = ["inseq", "examples", "tests"]
extend-include = ["*.ipynb"]


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/examples/*" = ["B018", "E402"]

[tool.ruff.isort]
known-first-party = ["inseq"]
order-by-type = true

[tool.ruff.pylint]
max-branches = 22

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.ruff.pydocstyle]
convention = "google"
