[darglint]
# https://github.com/terrencepreilly/darglint
strictness = long
docstring_style = google

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass
    raise
    except
    raise NotImplementedError

[coverage:run]
source=inseq
omit =
    */__main__.py

[flake8]
exclude =
    .git,
    .vscode,
    .github,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    htmlcov,
    examples,
    dist,
    .tox,
    temp,
    *.egg,
    venv,
    .venv
select = E,W,F
doctests = False
verbose = 2
format = pylint
max-line-length = 119
per-file-ignores = __init__.py:F401
ignore= E203, E731, E741, F821, W503, C901

[metadata]
license_file = LICENSE
description-file = README.md

[bandit]
targets = ["inseq"]
skips = ["B301"]
